--- a/src/App.css
+++ b/src/App.css
@@ -19,8 +19,7 @@ flex-shrink: 0;
 
 .bigbig{
   border-radius: 12px;
-border:none;
-justify-content: space-around;
+border: 1px solid #EBEBEB;
 background: #FFF;
 padding: 15px;
 }
@@ -46,17 +45,12 @@ height: 12px;
 }
 .flx div:nth-child(2)>p{
   border-radius: 16px;
-background: #544B8D;width: 12px;
-height: 12px;
-}
-.flx div:nth-child(4)>p{
-  border-radius: 16px;
-background: #3BB85E;width: 12px;
+background: #FFC400;width: 12px;
 height: 12px;
 }
 .flx div:nth-child(3)>p{
   border-radius: 16px;
-background:#FFC400;width: 12px;
+background: #3BB85E;width: 12px;
 height: 12px;
 }
 .flx div>span:nth-child(3){
@@ -135,6 +129,7 @@ background: #02AB6C;
 }
 .main{
   width: 100%;
+  /* background-color: #eff4f7; */
   margin-left:250px ;
 }
 .top{
@@ -146,24 +141,19 @@ justify-content: space-between;
 align-items: center;
 flex-shrink: 0;
 }
-.doug>div:nth-child(2){
-  border:none !important;
-}
-.doug canvas{
-  width:500px !important;
-  height:250px !important
-}
-.start{
+.st{
   display: flex;
 height: 64px;
 align-items: center;
 gap: 12px;
 }
-.start>span{
+.st>span{
   color: black;
+
+
 font-size: 16px;
 font-style: normal;
-font-weight: 600;
+font-weight: 400;
 line-height: normal;
 }
 .end{
@@ -177,98 +167,6 @@ gap: 15px;
   width: 32px;
 height: 32px;
 border-radius: 32px;
-}
-
-.data-container {
-  justify-content: center;
-  border-radius: 8px;
-  border: 1px solid #fff;
-  background: linear-gradient(0deg, rgba(224, 48, 33, 0.04) 0%, rgba(224, 48, 33, 0.04) 100%), #fff;
-  display: flex;
-  margin-top: 14px;
-  width: 100%;
-  flex-direction: column;
-}
-
-.data-wrapper {
-  border-radius: 8px;
-  border-left: 6px solid #e03021;
-  display: flex;
-  justify-content: space-between;
-  gap: 20px;
-  padding: 15px 19px;
-}
-
-.data {
-  color: #181616;
-  text-align: center;
-  font: 600 15px HelveticaNeue, sans-serif;
-}
-
-.co2 {
-  color: rgb(17, 17, 17);
-}
-
-.percent {
-  justify-content: center;
-  color: rgba(171, 2, 2, 0.67);
-  text-align: center;
-  align-self: center;
-  margin: auto 0;
-  font: 600 11px HelveticaNeue, sans-serif;
-}
-.content-wrapper {
-  display: flex; 
-  justify-content: center; 
-  border-radius: 8px; 
-  border: 1px solid #fff; 
-  border-left: 6px solid #ffc400;
-  background: linear-gradient(0deg, rgba(255, 196, 0, 0.04) 0%, rgba(255, 196, 0, 0.04) 100%), #fff; 
-  /* display: flex;  */
-  margin-top: 25px; 
-  padding: 15px 19px;
-  justify-content: space-between;
-  width: 100%; 
-  /* flex-direction: column;  */
-} 
-
-.value { 
-  color: #0c0c0c; 
-  text-align: center; 
-  font: 600 15px HelveticaNeue, sans-serif; 
-} 
-
-.change { 
-  justify-content: center; 
-  color: rgba(171, 2, 2, 0.67); 
-  text-align: center; 
-  align-self: start; 
-  font: 600 11px HelveticaNeue, sans-serif; 
-} 
-
- 
-.percentage-container {
-  justify-content: center;
-  border-radius: 8px;
-  width: 100%;
-  border: 1px solid #fff;
-  background: linear-gradient(0deg, rgba(59, 184, 94, 0.04) 0%, rgba(59, 184, 94, 0.04) 100%), #fff;
-  display: flex;
-  margin-top: 14px;
-  flex-direction: column;
-}
-
-.percentage {
-  color: #1e1d1d;
-  text-align:start;
-  white-space: nowrap;
-  align-items: start;
-  border-radius: 8px;
-  border-left: 6px solid #3bb85e;
-  /* font-weight: 600; */
-  justify-content: center;
-  padding: 15px 60px 15px 16px;
-  font: 600 15px HelveticaNeue, sans-serif;
 }
 .sp{
   color: white;
@@ -291,8 +189,10 @@ line-height: normal;
 .first{
   display: grid;
   grid-template-columns: repeat(4,1fr);
-  gap: 90px;
-  margin-left: 68px;
+  /* gap: 20px; */
+  /* margin-left: 30px; */
+  /* justify-content: space-around; */
+  justify-items: center;
 }
 .first_one{
   width: 320px;
@@ -314,7 +214,7 @@ align-items: center;
 margin: 15px 25px 5px 25px;
 font-size: 16px;
 font-style: normal;
-font-weight: 600;
+font-weight: 400;
 line-height: normal;
 }
 .firstPP{
@@ -326,7 +226,7 @@ margin: 15px 25px 5px 25px;
 
 font-size: 16px;
 font-style: normal;
-font-weight: 600;
+font-weight: 400;
 line-height: normal;
 }
 .secP{
@@ -353,9 +253,7 @@ margin-top: 50px;
 }
 .goods{
   display: flex;
-/* justify-content: center; */
-margin-top: 14px;
-width: 100%;
+justify-content: center;
 align-items: center;
 align-self: stretch;
 border-radius: 8px;
@@ -432,11 +330,10 @@ border-radius: 10px;
   color: grey;
 }
 .barLine{
-  width: 88%;
+  width: 90%;
   background-color: white;
-  margin: 30px 0px 0px 65px;
+  margin: 30px 0px 0px 30px;
   border-radius: 12px;
-
 border: 1px solid #EBEBEB;
 background: #FFF;
 box-shadow: 0px 0.599px 5.32px 0px rgba(0, 0, 0, 0.01), 0px 2.01px 17.869px 0px rgba(0, 0, 0, 0.01), 0px 9px 80px 0px rgba(0, 0, 0, 0.02);
@@ -450,11 +347,12 @@ justify-content: space-between;
 align-items: center;
 flex-shrink: 0;
 }
-.barLine p{
-  color: #000000;
-font-size: 19px;
+.barLine>p{
+  color: #FFF;
+
+font-size: 14px;
 font-style: normal;
-font-weight: 600;
+font-weight: bold;
 line-height: normal;
 }
 .doug>div:nth-child(2){
@@ -485,33 +383,24 @@ flex-shrink: 0;
 .doug{
   display: flex;
   flex-direction: column;
-padding: 7px;
   margin-top: 20px;
   gap: 7px;
   margin-left: 40px;
-  border:1px solid rgba(12, 12, 12, 0.352);
-  border-radius: 5px;
-  height: 50%;
 }
 
-.doug p{
-  font: 600 15px HelveticaNeue, sans-serif;
-  margin-bottom: 8px;
-}
 .doug>div:nth-child(1)>img{
   width: 459px;
   height: 107px;
   object-fit: cover;
   border-radius: 10px;
 }
-
+/* Basic styling for the table */
 table {
   width: 600px;
   border-collapse: collapse;
   border: 1px solid rgb(209, 209, 209);
   font-weight: 600;
 }
-
 
 thead {
   background-color: rgb(247, 247, 247)
@@ -524,6 +413,9 @@ th, td {
   border-right: 1px solid #ddd;
 }
 
+
+
+
 tbody tr:hover {
   background-color: #e0e0e0;
 }
@@ -531,9 +423,8 @@ tbody tr:hover {
   display: flex;
   flex-direction: row;
   margin: 30px;
-  width: 90%;
-  background-color: none;
-  justify-content: space-between;
+
+  justify-content: space-around;
 }
 .red{
   color:red
@@ -600,7 +491,9 @@ box-shadow: 0px 0.599px 5.32px 0px rgba(0, 0, 0, 0.01), 0px 2.01px 17.869px 0px 
 
 @media screen and (max-width: 1130px) {
   .nut{
-    flex-direction: column;
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+
    align-items: center;
    gap: 50px;
   }
@@ -635,7 +528,8 @@ box-shadow: 0px 0.599px 5.32px 0px rgba(0, 0, 0, 0.01), 0px 2.01px 17.869px 0px 
 
 @media screen and (max-width:450px) {
   .first{
-    grid-template-columns: repeat(1,1fr);
+    width: 120%;
+    grid-template-columns:auto;
   }
   .sidebarDiv{
     display: none;
@@ -648,7 +542,6 @@ box-shadow: 0px 0.599px 5.32px 0px rgba(0, 0, 0, 0.01), 0px 2.01px 17.869px 0px 
   }
   .App{
     display: block;
-    background-color: #FFFFFF !important;
   }
   .final{
     width: 100%;
@@ -658,7 +551,8 @@ box-shadow: 0px 0.599px 5.32px 0px rgba(0, 0, 0, 0.01), 0px 2.01px 17.869px 0px 
   }
   .nut{
     width: 100%;
-    
+    display: grid;
+    grid-template-columns: auto;
     margin: 0;
   }
   .doug{
@@ -671,6 +565,7 @@ box-shadow: 0px 0.599px 5.32px 0px rgba(0, 0, 0, 0.01), 0px 2.01px 17.869px 0px 
     width: 100%;
   }
   .respon{
+    width: 120%;
     display: flex;
     justify-content: space-between;
   }
@@ -680,6 +575,33 @@ box-shadow: 0px 0.599px 5.32px 0px rgba(0, 0, 0, 0.01), 0px 2.01px 17.869px 0px 
   background-color:#2C2C2C;
 }
 
-.apexcharts-legend-series .apexcharts-legend-marker{
-  width: 35px !important;
+
+@media screen and (max-width: 600px) {
+  table {
+    width: 50%;
+    overflow-x: auto; 
+  }
+
+  th, td {
+    width: 90%;
+    box-sizing: border-box;
+  }
+
+  th {
+    text-align: left;
+  }
+
+  tbody tr {
+    
+    margin-bottom: 15px;
+  }
+
+  tbody td {
+    text-align: left;
+  }
 }
+
+
+
+
+
